Add provider/structure counter to homepage

--- a/_includes/AUTHORS
+++ b/_includes/AUTHORS
@@ -1,63 +1,1 @@
-The OPTIMADE development team in alphabetical order:
-
-- Casper Andersen
-- Thomas Archer
-- Rickard Armiento
-- Rossella Aversa
-- Johan Bergsma
-- Evgeny Blokhin
-- Kamal Choudhary
-- Pauline Colinet
-- Gareth Conduit
-- Stefano Curtarolo
-- Davide Di Stefano
-- Alexander Dorsk
-- Claudia Draxl
-- Shyam Dwaraknath
-- Suleyman Er
-- Marco Esters
-- Matthew Evans
-- Ádám Fekete
-- Marco Fornari
-- Matteo Giantomassi
-- Abhijith Gopakumar
-- Marco Govoni
-- Saulius Gražulis
-- Geoffroy Hautier
-- Vinay Hegde
-- Matthew Horton
-- Patrick Huck
-- Georg Huhs
-- Jens Hummelshoej
-- Karsten W. Jacobsen
-- Ankit Kariryaa
-- Boris Kozinsky
-- Snehal Kumbhar
-- Mohan Liu
-- Nicola Marzari
-- Andrius Merkys
-- Fawzi Mohamed
-- Andrew Morris
-- Arash Mostofi
-- Corey Oses
-- Kristin Persson
-- Guido Petretto
-- Giovanni Pizzi
-- Thomas Purcell
-- Francesco Ricci
-- Gian-Marco Rignanese
-- Frisco Rose
-- Matthias Scheffler
-- Markus Scheidgen
-- Daniel Speckhard
-- Leopold Talirz
-- Cormac Toher
-- Martin Uhrin
-- Antanas Vaitkus
-- Pierre Villars
-- David Waroquiers
-- Donald Winston
-- Chris Wolverton
-- Michael Wu
-- Yibin Xu
-- Xiaoyu Yang
+The latest list of contributors can be found on GitHub at <a href="https://github.com/Materials-Consortia/OPTIMADE/blob/develop/AUTHORS)">AUTHORS</a>.
